force-app/main/default/objects/TemplateTask__c/TemplateTask__c.object-meta.xml
<CustomObject>
    <description>This will comprise several steps and used so that the candidates are able to complete said tasks within a certain amount of time to pass their probation</description>
    <label>Template Task</label>
    <nameField>
        <label>TemplateTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TemplateTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>