force-app/main/default/objects/TemplateTask__c/fields/Relative_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Relative_Days_to_Complete__c</fullName>
    <label>Relative Days to Complete</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>