force-app/main/default/objects/TemplateTask__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>This field allows for the specifying of requirements that candidates must adhere to.</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>