force-app/main/default/objects/TemplateTask__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>This Template is created for the different roles MainlyDigital offer.</description>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>TemplateTasks</relationshipLabel>
    <relationshipName>TemplateTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>