force-app/main/default/objects/TemplateTask__c/validationRules/Quantity_Must_Not_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Not_be_Negative</fullName>
    <active>true</active>
    <description>Sets a parameter that stops users from entering negative numbers.</description>
    <errorConditionFormula>Relative_Days_to_Complete__c &lt; 0</errorConditionFormula>
    <errorMessage>Quantity cannot be negative. Enter positive value</errorMessage>
</ValidationRule>